--- a/src/editor.scss
+++ b/src/editor.scss
@@ -4,6 +4,12 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-themezee-count-up-block input[type="text"] {
-	font-size: 48px;
+.wp-block-themezee-count-up-block {
+	input[type="text"] {
+		font-size: 48px;
+	}
+
+	&.has-background {
+		padding: 8px 16px;
+	}
 }
